etl-api/src/k8s/snapshots/etl_api__k8s__http__tests__create_bq_secret_env_var_json.snap
---
source: etl-api/src/k8s/http.rs
expression: bq_env_var_json
---
{
  "name": "APP_DESTINATION__BIG_QUERY__SERVICE_ACCOUNT_KEY",
  "valueFrom": {
    "secretKeyRef": {
      "key": "service-account-key",
      "name": "abcdefghijklmnopqrst-42-bq-service-account-key"
    }
  }
}
