etl-api/src/k8s/snapshots/etl_api__k8s__http__tests__create_bq_service_account_key_secret_json.snap
---
source: etl-api/src/k8s/http.rs
expression: secret_json
---
{
  "apiVersion": "v1",
  "data": {
    "service-account-key": "ewogICJrZXkiOiAidmFsdWUiCn0="
  },
  "kind": "Secret",
  "metadata": {
    "name": "test-secret",
    "namespace": "etl-data-plane"
  },
  "type": "Opaque"
}
