etl-api/src/k8s/snapshots/etl_api__k8s__http__tests__create_ducklake_container_environment-2.snap
---
source: etl-api/src/k8s/http.rs
expression: container_environment
---
[
  {
    "name": "APP_ENVIRONMENT",
    "value": "staging"
  },
  {
    "name": "APP_VERSION",
    "value": "ramsup/etl-replicator:2a41356af735f891de37d71c0e1a62864fe4630e"
  },
  {
    "name": "RUST_LOG",
    "value": "info"
  },
  {
    "name": "RUST_BACKTRACE",
    "value": "1"
  },
  {
    "name": "APP_SENTRY__DSN",
    "valueFrom": {
      "secretKeyRef": {
        "key": "dsn",
        "name": "replicator-sentry-dsn",
        "optional": true
      }
    }
  },
  {
    "name": "APP_SUPABASE__API_KEY",
    "valueFrom": {
      "secretKeyRef": {
        "key": "key",
        "name": "supabase-api-key",
        "optional": true
      }
    }
  },
  {
    "name": "APP_SUPABASE__CONFIGCAT_SDK_KEY",
    "valueFrom": {
      "secretKeyRef": {
        "key": "key",
        "name": "replicator-configcat-sdk-key",
        "optional": true
      }
    }
  },
  {
    "name": "APP_PIPELINE__PG_CONNECTION__PASSWORD",
    "valueFrom": {
      "secretKeyRef": {
        "key": "password",
        "name": "abcdefghijklmnopqrst-42-postgres-password"
      }
    }
  },
  {
    "name": "APP_DESTINATION__DUCKLAKE__S3_ACCESS_KEY_ID",
    "valueFrom": {
      "secretKeyRef": {
        "key": "s3-access-key-id",
        "name": "abcdefghijklmnopqrst-42-ducklake",
        "optional": true
      }
    }
  },
  {
    "name": "APP_DESTINATION__DUCKLAKE__S3_SECRET_ACCESS_KEY",
    "valueFrom": {
      "secretKeyRef": {
        "key": "s3-secret-access-key",
        "name": "abcdefghijklmnopqrst-42-ducklake",
        "optional": true
      }
    }
  }
]
